--- a/InterfazGraficaReto2/packages.config
+++ b/InterfazGraficaReto2/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1652.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net472" />
   <package id="Npgsql" version="7.0.7" targetFramework="net472" />
   <package id="OpenTK" version="3.3.1" targetFramework="net472" />
   <package id="OpenTK.GLWpfControl" version="3.3.0" targetFramework="net472" />
