--- a/InterfazGraficaReto2/InterfazGraficaReto2.csproj
+++ b/InterfazGraficaReto2/InterfazGraficaReto2.csproj
@@ -158,8 +158,15 @@
     <Compile Include="Api.xaml.cs">
       <DependentUpon>Api.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BaseDatos.xaml.cs">
+      <DependentUpon>BaseDatos.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Page Include="Api.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="BaseDatos.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
