exportación de informes correctamente hecha

--- a/InterfazGraficaReto2/App.config
+++ b/InterfazGraficaReto2/App.config
@@ -21,6 +21,14 @@
         <assemblyIdentity name="ScottPlot" publicKeyToken="86698dc10387c39e" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.1.57.0" newVersion="5.1.57.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
