--- a/InterfazGraficaReto2/packages.config
+++ b/InterfazGraficaReto2/packages.config
@@ -1,18 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FastReport.Compat" version="2026.1.3" targetFramework="net472" />
+  <package id="FastReport.Compat.WPF.Demo" version="2026.1.3" targetFramework="net472" />
+  <package id="FastReport.DataVisualization.WPF.Demo" version="2026.1.3" targetFramework="net472" />
+  <package id="FastReport.Forms.WPF.Demo" version="2026.1.3" targetFramework="net472" />
+  <package id="FastReport.OpenSource" version="2026.1.3" targetFramework="net472" />
+  <package id="FastReport.OpenSource.Export.PdfSimple" version="2026.1.3" targetFramework="net472" />
+  <package id="FastReport.WPF.Demo" version="2026.1.3" targetFramework="net472" />
+  <package id="Google.Apis" version="1.73.0" targetFramework="net472" />
+  <package id="Google.Apis.Auth" version="1.73.0" targetFramework="net472" />
+  <package id="Google.Apis.Core" version="1.73.0" targetFramework="net472" />
+  <package id="Google.Apis.Drive.v3" version="1.73.0.3996" targetFramework="net472" />
   <package id="HarfBuzzSharp" version="8.3.1.1" targetFramework="net472" />
   <package id="HarfBuzzSharp.NativeAssets.Linux" version="8.3.1.1" targetFramework="net472" />
   <package id="HarfBuzzSharp.NativeAssets.macOS" version="8.3.1.1" targetFramework="net472" />
   <package id="HarfBuzzSharp.NativeAssets.Win32" version="8.3.1.1" targetFramework="net472" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1652.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net472" />
-  <package id="Npgsql" version="7.0.7" targetFramework="net472" />
+  <package id="Npgsql" version="8.0.3" targetFramework="net472" />
   <package id="OpenTK" version="3.3.1" targetFramework="net472" />
   <package id="OpenTK.GLWpfControl" version="3.3.0" targetFramework="net472" />
   <package id="ScottPlot" version="5.1.57" targetFramework="net472" />
@@ -25,14 +37,14 @@
   <package id="SkiaSharp.Views.Desktop.Common" version="3.119.0" targetFramework="net472" />
   <package id="SkiaSharp.Views.WPF" version="3.119.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="7.0.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net472" />
-  <package id="System.Text.Json" version="7.0.0" targetFramework="net472" />
-  <package id="System.Threading.Channels" version="7.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="8.0.0" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="8.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.6.1" targetFramework="net472" />
 </packages>
